--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt --use-mirrors
+  #- pip install -r requirements.txt --use-mirrors
   #- pip install . --use-mirrors
 
 # command to run tests
